--- a/.gitignore
+++ b/.gitignore
@@ -151,6 +151,8 @@ dmypy.json
 *.tar
 *.tar.gz
 *.ckpt
+checkpoints/*.tar
+checkpoints/*.ckpt
 
 # Lightning-Hydra-Template
 configs/local/default.yaml
