--- a/configs/train.yaml
+++ b/configs/train.yaml
@@ -4,8 +4,8 @@
 # order of defaults determines the order in which configs override each other
 defaults:
   - _self_
-#  - datamodule: kit-amass-rot.yaml
-  - datamodule: guo-kit-ml.yaml
+ - datamodule: humanml.yaml
+  # - datamodule: guo-kit-ml.yaml
   - model: text_motion_model.yaml
   - callbacks: default.yaml
   - logger: null # set logger here or use command line (e.g. `python train.py logger=tensorboard`)
@@ -49,8 +49,8 @@ test: True
 # simply provide checkpoint path to resume training
 ckpt_path: null
 
-#eval_ckpt: /home/ICT2000/achemburkar/Desktop/repos/text-to-motion/checkpoints/t2m/text_mot_match/model/finest.tar    # HumanML3D
-eval_ckpt: /home/ICT2000/achemburkar/Desktop/repos/text-to-motion/checkpoints/kit/text_mot_match/model/finest.tar     # KIT-ML
+eval_ckpt: checkpoints/t2m/text_mot_match/model/finest.tar    # HumanML3D
+# eval_ckpt: checkpoints/kit/text_mot_match/model/finest.tar     # KIT-ML
 
 batch_size: 16
 
